[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/GenericLevel.gd" type="Script" id=1]
[ext_resource path="res://Sprites/dungeon_tileset.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/LevelExit.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/RedBlock.tscn" type="PackedScene" id=5]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )

[sub_resource type="TileSet" id=3]
0/name = "dungeon_tileset.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 8, 8 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "dungeon_tileset.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 8, 8, 8 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "dungeon_tileset.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 16, 8, 8 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 32 )

[node name="Level00" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 3 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 8
format = 1
tile_data = PoolIntArray( 0, -1073741824, 0, 1, -1073741824, 0, 2, -1073741824, 0, 3, -1073741824, 0, 4, -1073741824, 0, 5, -1073741824, 0, 6, -1073741824, 0, 7, -1073741824, 0, 8, -1073741824, 0, 9, -1073741824, 0, 10, -1073741824, 0, 11, -1073741824, 0, 12, -1073741824, 0, 13, 0, 0, 65536, -1073741824, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 0, 0, 131072, -1073741824, 0, 131073, 2, 0, 131074, 2, 0, 131075, 2, 0, 131076, 2, 0, 131077, 2, 0, 131078, 2, 0, 131079, 2, 0, 131080, 2, 0, 131081, 2, 0, 131082, 2, 0, 131083, 2, 0, 131084, 2, 0, 131085, 0, 0, 196608, -1073741824, 0, 196609, 2, 0, 196610, 2, 0, 196611, 2, 0, 196612, 2, 0, 196613, 2, 0, 196614, 2, 0, 196615, 2, 0, 196616, 2, 0, 196617, 2, 0, 196618, 2, 0, 196619, 2, 0, 196620, 2, 0, 196621, 0, 0, 262144, -1073741824, 0, 262145, 2, 0, 262146, 2, 0, 262147, 2, 0, 262148, 2, 0, 262149, 2, 0, 262150, 2, 0, 262151, 2, 0, 262152, 2, 0, 262153, 2, 0, 262154, 2, 0, 262155, 2, 0, 262156, 2, 0, 262157, 0, 0, 327680, -1073741824, 0, 327681, 2, 0, 327682, 2, 0, 327683, 2, 0, 327684, 2, 0, 327685, 2, 0, 327686, 2, 0, 327687, 2, 0, 327688, 2, 0, 327689, 2, 0, 327690, 2, 0, 327691, 2, 0, 327692, 2, 0, 327693, 0, 0, 393216, -1073741824, 0, 393217, 2, 0, 393218, 2, 0, 393219, 2, 0, 393220, 2, 0, 393221, 2, 0, 393222, 2, 0, 393223, 2, 0, 393224, 2, 0, 393225, 2, 0, 393226, 2, 0, 393227, 2, 0, 393228, 2, 0, 393229, 0, 0, 458752, -1073741824, 0, 458753, -1073741824, 0, 458754, -1073741824, 0, 458755, -1073741824, 0, 458756, -1073741824, 0, 458757, -1073741824, 0, 458758, -1073741824, 0, 458759, -1073741824, 0, 458760, -1073741824, 0, 458761, -1073741824, 0, 458762, -1073741824, 0, 458763, -1073741824, 0, 458764, -1073741824, 0, 458765, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 44, 32 )

[node name="LevelExit" parent="." instance=ExtResource( 4 )]
position = Vector2( 20, 32 )

[node name="RedBlocks" type="YSort" parent="."]

[node name="RedBlock" parent="RedBlocks" instance=ExtResource( 5 )]
position = Vector2( 32, 52 )

[node name="RedBlock2" parent="RedBlocks" instance=ExtResource( 5 )]
position = Vector2( 32, 44 )

[node name="RedBlock3" parent="RedBlocks" instance=ExtResource( 5 )]
position = Vector2( 32, 36 )

[node name="RedBlock4" parent="RedBlocks" instance=ExtResource( 5 )]
position = Vector2( 32, 28 )

[node name="RedBlock5" parent="RedBlocks" instance=ExtResource( 5 )]
position = Vector2( 32, 20 )

[node name="CameraArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CameraArea"]
shape = SubResource( 4 )
[connection signal="area_exited" from="CameraArea" to="." method="_on_CameraArea_area_exited"]
[connection signal="body_exited" from="CameraArea" to="." method="_on_CameraArea_body_exited"]

[editable path="Player"]
